新規登録時エラーメッセージ表示

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -13,6 +13,7 @@ ja:
       user:
         nickname: ユーザー名
         email: メールアドレス
+        login: ユーザー名またはメールアドレス
         password: パスワード
   date:
     abbr_day_names:
