--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -4,12 +4,6 @@ ja:
       models:
         user:
           attributes:
-            user:
-              taken: "は既に使用されています。"
-              blank: "が入力されていません。"
-              too_short: "は%{count}文字以上に設定して下さい。"
-              too_long: "は%{count}文字以下に設定して下さい。"
-              invalid: "は有効でありません。"
             email:
               taken: "は既に使用されています。"
               blank: "が入力されていません。"
@@ -26,7 +20,7 @@ ja:
     attributes:
       user:
         current_password: "現在のパスワード"
-        nickname: "ユーザー名"
+        name: 名前
         email: "メールアドレス"
         password: "パスワード"
         password_confirmation: "確認用パスワード"
